# ATSP-genetic-algorithm

./: .gitignore  CMakeLists.txt  README.md  main.cpp
algorithm/: GeneticAlgo.cpp  GeneticAlgo.h  Solution.cpp  Solution.h
output/: results_ftv170.atsp_1000_1.csv  results_ftv170.atsp_1000_2.csv  results_ftv170.atsp_2000_1.csv  results_ftv170.atsp_2000_2.csv  results_ftv170.atsp_5000_1.csv  results_ftv170.atsp_5000_2.csv  results_ftv47.atsp_1000_1.csv  results_ftv47.atsp_1000_2.csv  results_ftv47.atsp_2000_1.csv  results_ftv47.atsp_2000_2.csv  results_ftv47.atsp_5000_1.csv  results_ftv47.atsp_5000_2.csv  results_rbg403.atsp_1000_1.csv  results_rbg403.atsp_1000_2.csv  results_rbg403.atsp_2000_1.csv  results_rbg403.atsp_2000_2.csv  results_rbg403.atsp_5000_1.csv  results_rbg403.atsp_5000_2.csv
structures/: Graph.cpp  Graph.h
utils/: Timer.cpp  Timer.h
